feat: add purchases (#79)